# python-learner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  start-dev.ps1
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_progress_events.py  0003_weekly_attempts.py  0004_daily_attempts.py
backend/app/: config.py  main.py
backend/app/accounts/: router.py  schemas.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/billing/: router.py
backend/app/content/: router.py  service.py
backend/app/core/: errors.py  rate_limit.py  sandbox.py  security.py
backend/app/daily/: router.py
backend/app/db/: models.py  seed.py  session.py
backend/app/email/: service.py
backend/app/parent/: router.py  schemas.py  service.py
backend/app/progress/: router.py
backend/app/weekly/: router.py
backend/tests/: conftest.py  test_auth.py  test_content.py  test_health.py  test_progress.py
content/daily/: challenge_1.yaml  challenge_2.yaml  challenge_3.yaml  challenge_4.yaml  (+3 more)
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: add_beats_unit1.py  add_beats_unit2.py  add_beats_unit3.py  add_beats_unit4.py  add_beats_unit5.py  add_beats_unit6.py  add_beats_unit7.py  add_breakfix_unit2.py  add_breakfix_unit3.py  add_breakfix_unit4.py  add_breakfix_unit5.py  add_breakfix_unit6.py  add_breakfix_unit7.py  add_world_exercises.py
(+82 files in other folders)
